solve issues with background image, css order and additional wraper

--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,13 @@
   font-weight: 900;
 }
 
-.form {
-  margin-top: 20px;
-  position: relative;
-  display: block;
+* {
   box-sizing: border-box;
+}
+
+.form {
+  position: relative;
+  margin-top: 20px;
 }
 
 .input::placeholder {
@@ -26,19 +28,19 @@
 }
 
 .input {
-  border: 1px solid #e1e7ed;
-  border-radius: 4px;
-  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
   width: 100%;
-  font-family: "Avenir", sans-serif;
-  font-weight: 900;
-  color: #3d4e61;
   height: 70px;
   padding-top: 25px;
   padding-bottom: 25px;
   padding-left: 62px;
+  font-family: "Avenir", sans-serif;
   font-size: 16px;
   line-height: 22px;
+  font-weight: 900;
+  color: #3d4e61;
+  border: 1px solid #e1e7ed;
+  border-radius: 4px;
+  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
 }
 
 .input--small {
@@ -52,27 +54,31 @@
 
 .input:hover {
   box-shadow: 0 3px 8px rgba(61, 78, 97, 0.2);
+  outline: none;
 }
 
 .input:focus {
-  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
-  border-radius: 3px;
   font-family: "Avenir", sans-serif;
   font-weight: 900;
+  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
+  border-radius: 3px;
+  outline: none;
 }
 
 .icon {
-  display: inline-block;
   position: absolute;
-  width: 19px;
-  height: 19px;
   left: 26px;
   top: 25px;
+  width: 19px;
+  height: 19px;
+  background-image: url(./images/Search.svg);
 }
 
 .icon--small {
-  width: 11px;
-  height: 11px;
   left: 15px;
   top: 15px;
+  width: 11px;
+  height: 11px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
